--- a/style.css
+++ b/style.css
@@ -361,3 +361,21 @@ p1{
   margin: 5px;
   color: white;
 }
+
+#screen{
+  position:absolute;
+  width: 400px;
+  height: 300px;
+  border-radius: 10px;
+  display: inline-block;
+  background-color: black;
+  font-size:20px;
+  font-family: 'Helvetica';
+  padding: 0px;
+  margin-left: 70%;
+  margin-top: 200px;
+  color: green;
+  text-align:center;
+  vertical-align: middle;
+  word-wrap: break-word;
+}
