--- a/style.css
+++ b/style.css
@@ -7,6 +7,11 @@
   top:700px;
   left:500px;
 }
+#velocity{
+  position:absolute;
+  top:720px;
+  left:500px;
+}
 #cont{
   position:absolute;
   top:0px;
