--- a/style.css
+++ b/style.css
@@ -9,10 +9,13 @@
   height:120px;
   background-color:grey;
   border: 5px solid black;
-  top:52%;
-  left:69%;
+  top:350px;
+  left:930px;
 }
 p3{
+  position:relative;
+  top:0px;
+  left:100px;
   font-size:30px;
   font-family: 'Passion One';
   color: rgb(12, 10, 10);
@@ -51,16 +54,16 @@ p7{
 
 
 #change_chart{
-  position:absolute;
+  position:relative;
   height:25px;
-  top:35%;
-  left:25%;
+  top:33px;
+  left:-60px;
 }
 #velocity{
-  position:absolute;
+  position:relative;
   height:25px;
-  top:65%;
-  left:25%;
+  top:70px;
+  left:-165px;
 }
 #cont{
   position:absolute;
@@ -80,7 +83,7 @@ p7{
   width: 45px;
   top: 0px;
 }
-/*<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>*/
+
 body{
   background-color:#4F597A;
 }
@@ -463,8 +466,8 @@ p1{
 
 #note_to_play_cont{
   position:absolute;
-  top:77%;
-  left:73%;
+  top:510px;
+  left:980px;
   padding: 15px;
   border-radius: 5px;
   width:290px;
@@ -477,7 +480,7 @@ p1{
 
 #select_notes{
   position:absolute;
-  top:72%;
+  top:480px;
   left:990px;
   width: fit-content;
   height: fit-content;
@@ -521,8 +524,8 @@ p1{
   font-size:15px;
   font-family: 'Helvetica';
   padding: 0px;
-  margin-left: 68%;
-  top: 43%;
+  margin-left: 910px;
+  top: 280px;
   color:white;
   text-align:center;
   vertical-align: middle;
